--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,6 +2,13 @@ jobs:
 - job: linux
   pool: {vmImage: 'Ubuntu-16.04'}
   steps:
+    - bash: |
+        curl https://www.mpi-hd.mpg.de/personalhomes/globes/download/globes-3.2.17.tar.gz | tar xvz
+        cd globes-3.2.17
+        ./configure
+        make
+        make install
+        ldconfig
     - task: UsePythonVersion@0
     - bash: |
         python -m pip install --upgrade pip
@@ -12,6 +19,13 @@ jobs:
 - job: macos
   pool: {vmImage: 'macOS-10.13'}
   steps:
+    - bash: |
+        curl https://www.mpi-hd.mpg.de/personalhomes/globes/download/globes-3.2.17.tar.gz | tar xvz
+        cd globes-3.2.17
+        ./configure
+        make
+        make install
+        ldconfig
     - task: UsePythonVersion@0
     - bash: |
         python -m pip install --upgrade pip
