--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,6 +3,7 @@ jobs:
   pool: {vmImage: 'Ubuntu-16.04'}
   steps:
     - bash: |
+        sudo apt-get update && sudo apt-get install -y libgsl-dev
         curl https://www.mpi-hd.mpg.de/personalhomes/globes/download/globes-3.2.17.tar.gz | tar xvz
         cd globes-3.2.17
         ./configure
