--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,6 +12,8 @@ jobs:
         sudo ldconfig
         cd ..
     - task: UsePythonVersion@0
+      inputs:
+        versionSpec: '3.x'
     - bash: |
         python -m pip install --upgrade pip setuptools wheel
         pip install six
