--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,7 +1,3 @@
-variables:
-  CIBW_SKIP: cp27
-
-
 jobs:
 - job: linux
   pool: {vmImage: 'Ubuntu-16.04'}
@@ -17,7 +13,7 @@ jobs:
         cd ..
     - task: UsePythonVersion@0
       inputs:
-        versionSpec: '3.x'
+        #versionSpec: '3.x'
     - bash: |
         python -m pip install --upgrade pip setuptools wheel
         pip install six
