--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,7 +13,7 @@ jobs:
         cd ..
     - task: UsePythonVersion@0
       inputs:
-        #versionSpec: '3.x'
+        versionSpec: '3.7'
     - bash: |
         python -m pip install --upgrade pip setuptools wheel
         pip install six
