--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,7 +32,7 @@ jobs:
         pip install six
         pip install cffi
         pip install cibuildwheel==0.11.1
-        cibuildwheel --output-dir wheelhouse .
+        cibuildwheel --output-dir wheelhouse --platform linux.
     - task: PublishBuildArtifacts@1
       inputs: {pathtoPublish: 'wheelhouse'}
 - job: macos
