--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,6 +3,7 @@ jobs:
   pool: {vmImage: 'Ubuntu-16.04'}
   variables:
     CIBW_BUILD: 'cp35'
+    CIBW_PLATFORM: 'linux'
   strategy:
     matrix:
       Python35:
