--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,7 +2,8 @@ jobs:
 - job: linux
   pool: {vmImage: 'Ubuntu-16.04'}
   variables:
-    CIBW_BUILD: 'cp35'
+    CIBW_BUILD: 'cp35' 'cp37'
+    CIBW_BUILD_VERBOSITY: 3
     #CIBW_PLATFORM: 'linux'
   strategy:
     matrix:
@@ -35,7 +36,7 @@ jobs:
         pip install cffi
         pip install cibuildwheel==0.11.1
         ls
-        cibuildwheel --output-dir wheelhouse --platform linux 
+        cibuildwheel --output-dir wheelhouse --platform linux
         ls .
     - task: PublishBuildArtifacts@1
       inputs: {pathtoPublish: 'wheelhouse'}
