--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,7 +37,9 @@ jobs:
         pip install cibuildwheel==0.11.1
         ls
         cibuildwheel --output-dir wheelhouse --platform linux
-        ls .
+        ls -la
+        cd wheelhouse
+        ls -la.
     - task: PublishBuildArtifacts@1
       inputs: {pathtoPublish: 'wheelhouse'}
 - job: macos
