--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,7 +20,8 @@ jobs:
         sudo apt-get update && sudo apt-get install -y libgsl-dev
         curl https://www.mpi-hd.mpg.de/personalhomes/globes/download/globes-3.2.17.tar.gz | tar xvz
         cd globes-3.2.17
-        ./configure
+        export GLB_DIR=./globes
+        ./configure --prefix=$GLB_DIR
         sudo make
         sudo make install
         sudo ldconfig
