--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -42,6 +42,9 @@ jobs:
         echo 'printdir'
         echo 'printdir'
         pwd
+        echo $(Build.SourcesDirectory)
+        echo $(Agent.BuildDirectory)
+        
     - task: UsePythonVersion@0
       #inputs:
       #  versionSpec: '$(python.version)'
