--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,6 +27,7 @@ jobs:
         sudo ldconfig
         cd ..
         ls
+        echo 'ld_run'
         echo $LD_RUN_PATH
         echo $LD_LIBRARY_PATH
         export PATH=$GLB_DIR/bin:$PATH
@@ -36,6 +37,7 @@ jobs:
         cd /usr/globes/include
         ls
         cd globes
+        echo 'ld_run'
         echo $LD_RUN_PATH
         echo $LD_LIBRARY_PATH
         ls
