--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -46,6 +46,12 @@ jobs:
         pwd
         echo $(Build.SourcesDirectory)
         echo $(Agent.BuildDirectory)
+        cd $(Build.SourcesDirectory)
+        mkdir globes .
+    - task: PublishPipelineArtifact@0
+      inputs:
+        artifactName: 'globeslib'
+        targetPath: 'globes'
 
     - task: UsePythonVersion@0
       inputs:
@@ -61,7 +67,7 @@ jobs:
         cibuildwheel --output-dir wheelhouse --platform linux
         ls -la
         cd wheelhouse
-        ls -la.
+        ls -la .
     - task: PublishBuildArtifacts@1
       inputs: {pathtoPublish: 'wheelhouse'}
 - job: macos
