--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -47,7 +47,7 @@ jobs:
         echo $(Build.SourcesDirectory)
         echo $(Agent.BuildDirectory)
         cd $(Build.SourcesDirectory)
-        mkdir globes .
+        mkdir globes
     - task: PublishPipelineArtifact@0
       inputs:
         artifactName: 'globeslib'
@@ -67,7 +67,7 @@ jobs:
         cibuildwheel --output-dir wheelhouse --platform linux
         ls -la
         cd wheelhouse
-        ls -la .
+        ls -la 
     - task: PublishBuildArtifacts@1
       inputs: {pathtoPublish: 'wheelhouse'}
 - job: macos
