--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -65,6 +65,8 @@ jobs:
     - bash: |
         pwd
         globes-config --include
+
+        export PATH=/home/vsts/work/1/a/globes:$PATH
         python -m pip install --upgrade pip setuptools wheel
         pip install cffi
         pip install cibuildwheel==0.11.1
