--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,56 +24,47 @@ jobs:
     workingDirectory: $(System.DefaultWorkingDirectory) #
     displayName: download and update libgsl-dev #
     failOnStderr: true #
-    env: # mapping of environment variables to add
 
   - bash: curl https://www.mpi-hd.mpg.de/personalhomes/globes/download/globes-3.2.17.tar.gz | tar xvfz
     workingDirectory: $(System.DefaultWorkingDirectory) #
     displayName: dowload and extract globes library #
     failOnStderr: true #
-    env: # mapping of environment variables to add
 
   - bash: ./configure --prefix=$(GLB_DIR)
     workingDirectory: $(System.DefaultWorkingDirectory)/globes-3.2.17 #
     displayName: configure globes library #
     failOnStderr: true #
-    env: # mapping of environment variables to add
 
   - bash: sudo make
     workingDirectory: $(System.DefaultWorkingDirectory)/globes-3.2.17 #
     displayName: make globes library #
     failOnStderr: true #
-    env: # mapping of environment variables to add
 
   - bash: sudo make install
     workingDirectory: $(System.DefaultWorkingDirectory)/globes-3.2.17 #
     displayName: install globes library #
     failOnStderr: true #
-    env: # mapping of environment variables to add
 
   - bash: sudo ldconfig
     workingDirectory: $(System.DefaultWorkingDirectory)/globes-3.2.17 #
     displayName: run ldconfig #
     failOnStderr: true #
-    env: # mapping of environment variables to add
 
   - bash: export PATH=$(GLB_BIN):$PATH
     workingDirectory: $(System.DefaultWorkingDirectory) #
     displayName: prepend GLB_BIN to PATH #
     failOnStderr: true #
-    env: # mapping of environment variables to add
 
   - bash: export LD_LIBRARY_PATH=$(GLB_BIN):$LD_LIBRARY_PATH
     workingDirectory: $(System.DefaultWorkingDirectory) #
     displayName: prepend GLB_BIN to PATH #
-    failOnStderr: true #
-    env: # mapping of environment variables to add
+    failOnStderr: true
 
   - task: PublishPipelineArtifact@1 # string  # reference to a task and version, e.g. "VSBuild@1"
     displayName: create globes library artifact # string  # friendly name displayed in the UI
     inputs: # task-specific inputs
       path: $(GLB_DIR)
       artifact: globeslib
-    env:
 
   # Use Python Version
   # Retrieves the specified version of Python from the tool cache. Optionally add it to PATH.
@@ -94,25 +85,21 @@ jobs:
     workingDirectory: $(Pipeline.Workspace) #
     displayName: prepend GLB_BIN to PATH #
     failOnStderr: true #
-    env:  # mapping of environment variables to add
 
   - bash: pip install cffi
     workingDirectory: $(System.DefaultWorkingDirectory) #
     displayName: pip cffi #
     failOnStderr: true #
-    env:  # mapping of environment variables to add
 
   - bash: pip install cibuildwheel==0.11.1
     workingDirectory: $(System.DefaultWorkingDirectory) #
     displayName: pip cibuildwheel #
     failOnStderr: true #
-    env:  # mapping of environment variables to add pip install cibuildwheel==0.11.1
 
   - bash: cibuildwheel --output-dir wheelhouse --platform linux
     workingDirectory: $(System.DefaultWorkingDirectory) #
     displayName: pip cibuildwheel #
     failOnStderr: true #
-    env:  # mapping of environment variables to add pip install cibuildwheel==0.11.1
 
   - task: PublishBuildArtifacts@1
     inputs: {pathtoPublish: 'wheelhouse'}
