--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -68,6 +68,12 @@ jobs:
     failOnStderr: false #
     #env: # mapping of environment variables to add
 
+  - bash: globes-config --include
+    workingDirectory: $(System.DefaultWorkingDirectory) #
+    displayName: globes-config --include #
+    failOnStderr: true #
+    #env: # mapping of environment variables to add
+
   - task: PublishPipelineArtifact@1 # string  # reference to a task and version, e.g. "VSBuild@1"
     displayName: create globes library artifact # string  # friendly name displayed in the UI
     #name: # string  # identifier for this step (A-Z, a-z, 0-9, and underscore)
@@ -94,7 +100,7 @@ jobs:
 
   - bash: python -m pip install --upgrade pip setuptools wheel
     workingDirectory: $(System.DefaultWorkingDirectory)
-    displayName: prepend GLB_BIN to PATH #
+    displayName: pip install/upgrade setuptools, wheel #
     failOnStderr: false #
     #env:  # mapping of environment variables to add
 
@@ -112,7 +118,7 @@ jobs:
 
   - bash: cibuildwheel --output-dir wheelhouse --platform linux
     workingDirectory: $(System.DefaultWorkingDirectory) #
-    displayName: pip cibuildwheel #
+    displayName: run cibuildwheel with output ./wheelhouse #
     failOnStderr: false #
     #env:  # mapping of environment variables to add pip install cibuildwheel==0.11.1
 
