--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -71,7 +71,7 @@ jobs:
   - bash: globes-config --include
     workingDirectory: $(System.DefaultWorkingDirectory) #
     displayName: globes-config --include #
-    failOnStderr: true #
+    failOnStderr: false #
     #env: # mapping of environment variables to add
 
   - task: PublishPipelineArtifact@1 # string  # reference to a task and version, e.g. "VSBuild@1"
@@ -81,6 +81,11 @@ jobs:
       path: $(GLB_DIR)
       artifact: globeslib
     #env: # { string: string }  # list of environment variables to add
+  - bash: globes-config --include
+    workingDirectory: $(System.DefaultWorkingDirectory) #
+    displayName: globes-config --include #
+    failOnStderr: false #
+    #env: # mapping of environment variables to add
 
   # Use Python Version
   # Retrieves the specified version of Python from the tool cache. Optionally add it to PATH.
@@ -97,6 +102,11 @@ jobs:
       source: current
       artifact: globeslib
       path: '$(System.DefaultWorkingDirectory)/globes' #By default, files are downloaded to $(Pipeline.Workspace)/{artifact}
+  - bash: globes-config --include
+    workingDirectory: $(System.DefaultWorkingDirectory) #
+    displayName: globes-config --include #
+    failOnStderr: false #
+    #env: # mapping of environment variables to add
 
   - bash: python -m pip install --upgrade pip setuptools wheel
     workingDirectory: $(System.DefaultWorkingDirectory)
