--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -110,7 +110,12 @@ jobs:
     failOnStderr: false #
     #env:  # mapping of environment variables to add
   - bash: ls
-    workingDirectory: $(System.DefaultWorkingDirectory)/globes #
+    workingDirectory: $(System.DefaultWorkingDirectory)/globes/include #
+    displayName: pwd #
+    failOnStderr: false #
+    #env:  # mapping of environment variables to add
+  - bash: pwd
+    workingDirectory: $(System.DefaultWorkingDirectory)/globes/include #
     displayName: pwd #
     failOnStderr: false #
     #env:  # mapping of environment variables to add
