--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,10 +15,10 @@ steps:
 
 - bash: curl https://www.mpi-hd.mpg.de/personalhomes/globes/download/globes-3.2.17.tar.gz | tar xvz
   workingDirectory: $(System.DefaultWorkingDirectory)
-  displayName: dowload and extract globes library
+  displayName: download and extract globes library
   failOnStderr: false
 
-- bash: ./configure --prefix=$(GLB_DIR)
+- bash: ./configure
   workingDirectory: $(System.DefaultWorkingDirectory)/globes-3.2.17
   displayName: configure globes library
   failOnStderr: false
