--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -57,3 +57,8 @@ steps:
   workingDirectory: $(System.DefaultWorkingDirectory)
   displayName: ls
   failOnStderr: false
+
+- bash: pip install cibuildwheel==0.11.1
+  workingDirectory: $(System.DefaultWorkingDirectory)
+  displayName: pip cibuildwheel
+  failOnStderr: false
