glb_include and typo

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -64,6 +64,6 @@ steps:
   failOnStderr: false
 
 - bash: cibuildwheel --output-dir wheelhouse
-  workingDirectory: $(System.DefaultWorkingDirectory) #
-  displayName: run cibuildwheel with output ./wheelhouse #
+  workingDirectory: $(System.DefaultWorkingDirectory)
+  displayName: run cibuildwheel with output ./wheelhouse
   failOnStderr: false
